# activia-trace

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  _api_seed.py  _check_db.py  _check_schema.py  _seed_test_data.py  docker-compose.yml  engram_memoria_completa.json  login-page.txt  skills-lock.json
backend/: .env.example  Dockerfile  alembic.ini  debug_trigger.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_tenant.py  002_auth.py  003_rbac.py  005_usuarios_asignaciones.py  006_padron.py  007_calificaciones.py  008_comunicacion.py  009_audit_log.py  010_equipos_permissions.py  011_encuentros_guardias.py  012_evaluaciones_coloquios.py  (+6 more)
backend/app/: check_columns.py  check_db.py  debug_jwt.py  fix_schema.py  main.py  seed.py  seed_mock.py  test_api.py
backend/scripts/: seed_auth.py
backend/tests/: conftest.py  db_utils.py  test_analisis_api.py  test_app_startup.py  test_audit_log.py  test_auditoria_api.py  test_auditoria_repository.py  test_auth_api.py  test_auth_models.py  test_avisos_api.py  test_calificaciones_api.py  test_coloquios_api.py  test_comunicaciones_api.py  test_config.py  test_database.py  test_encuentros_guardias.py  test_equipos_api.py  test_estructura_academica_api.py  test_exceptions.py  test_health.py  test_inbox_api.py  test_liquidaciones.py  test_mixin_timestamps.py  test_padron_api.py  test_perfil_api.py  test_permission_service.py  test_programas_api.py  test_rate_limiter.py  test_role_api.py  test_security.py  test_tareas_api.py  test_tenant_repository.py  test_user_role_api.py  test_usuarios_api.py
(+421 files in other folders)
