[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]

[project]
name = "active-trace"
version = "0.1.0"
description = "active-trace: plataforma de gestión académica y trazabilidad multi-tenant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "opentelemetry-api>=1.29.0,<2.0.0",
    "opentelemetry-sdk>=1.29.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<1.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "qrcode>=7.4.0,<8.0.0",
    "email-validator>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
